sjengida/g3/comp_to_san
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/comp_to_san/src/utils.c:578:7: error: conflicting types for 'comp_to_san'
void  comp_to_san( char *str, move_s move) 
      ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/comp_to_san/src/protos.h:119:6: note: previous declaration is here
void comp_to_san (move_s move, char str[]);
     ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/comp_to_san/src/utils.c:608:64: error: use of undeclared identifier 'xmmword_428B00'
*( __m128i *)type_to_char = _mm_load_si128( ( const __m128i *)&xmmword_428B00); 
                                                               ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/comp_to_san/src/utils.c:611:68: error: use of undeclared identifier 'xmmword_428B10'
*( __m128i *)&type_to_char[4] = _mm_load_si128( ( const __m128i *)&xmmword_428B10); 
                                                                   ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/comp_to_san/src/utils.c:613:68: error: use of undeclared identifier 'xmmword_428B20'
*( __m128i *)&type_to_char[8] = _mm_load_si128( ( const __m128i *)&xmmword_428B20); 
                                                                   ^
4 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/comp_to_san/src/obj/utils.o] Error 1
